--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     // create our canvas
     var canvas = d3.select("body").append("svg")
-      .attr("width", width)
-      .attr("height", height);
+      .attr("width", 2000)
+      .attr("height", 1000);
 
           var rect = canvas.append("rect")
         .attr("x", 0)
