--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-
+<div id="chart"></div>
 <script>
 
       var chartDiv = document.getElementById("chart");
@@ -30,8 +30,8 @@
 
     // create our canvas
     var canvas = d3.select("body").append("svg")
-      .attr("width", 2000)
-      .attr("height", 1000);
+      .attr("width", width)
+      .attr("height", height);
 
           var rect = canvas.append("rect")
         .attr("x", 0)
