--- a/index.html
+++ b/index.html
@@ -33,16 +33,8 @@
       .attr("width", width)
       .attr("height", height);
 
-          var rect = canvas.append("rect")
-        .attr("x", 0)
-        .attr("y", 20)
-        .attr("width", width)
-        .attr("height", 100)
-        .style("fill", black);
 
-
-
-
+banner();
 
 //initlise and setup facebook js sdk
   window.fbAsyncInit = function() {
@@ -116,6 +108,14 @@ FB.getLoginStatus(function(response) {
         .attr("width", width)
         .attr("height", 100)
         .style("fill", black);
+
+      var text = canvas.append("text")
+        .attr("x", 50)
+        .attr("y", 50)
+        .text('IDENTITY 2.0')
+        .style("font", "75px 'stellar'")
+        .style("fill", "white");
+
 
     }
 
