--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ FB.getLoginStatus(function(response) {
       var text = canvas.append("text")
         .attr("x", 50)
         .attr("y", 50)
-        .text('IDENTITY 2.0')
+        .text("IDENTITY 2.0")
         .style("font", "75px 'stellar'")
         .style("fill", "white");
 
