--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ FB.getLoginStatus(function(response) {
         .attr("y", 20)
         .attr("width", width)
         .attr("height", 100)
-        .style("fill", black);
+        .style("fill", "black");
 
       var text = canvas.append("text")
         .attr("x", 50)
