--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ FB.getLoginStatus(function(response) {
         .attr("x", 50)
         .attr("y", 50)
         .text("IDENTITY 2.0")
-        //.style("font", "75px 'stellar'")
+        .style("font", "75px 'stellar'")
         .style("fill", "white");
 
 
