--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ FB.getLoginStatus(function(response) {
 
       var text = canvas.append("text")
         .attr("x", 50)
-        .attr("y", 100)
-        .text("IDENTITY 2.0")
+        .attr("y", 90)
+        .text("WELCOME TO IDENTITY 2.0")
         .style("font", "75px 'stellar'")
         .style("fill", "white");
 
