--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
     background-color: #3b5998;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    position:absolute;
+    border-radius: 2px;
+    top:150px;
+    left:50px;
 }
 
     </style>
