--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     background-color: #3b5998;
     border: none;
     color: white;
-    padding: 10px 32px;
+    padding: 10px 100px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -141,6 +141,7 @@ FB.getLoginStatus(function(response) {
 <div id = "status"></div>
 <button onclick="getName()">Get Name</button>
 <button onclick="getId()">Get ID</button>
-<button class = "button" onclick = "login()">Login</button>
+<button class = "button" onclick = "login()">Login to Facebook</button>
+<p> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 </body>
 </html> 
