--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
     cursor: pointer;
     position:absolute;
     border-radius: 2px;
-    top:150px;
+    top:200px;
     left:50px;
+}
+
+p {
+    
+    margin-top: 1em;
+    margin-bottom: 1em;
+    position:absolute;
+    top:150px;
+    left:50px
+
 }
 
     </style>
