--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ FB.getLoginStatus(function(response) {
 
     function newPage(){
 
-      var rect = canvas,append("rect")
+      var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
