--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ FB.getLoginStatus(function(response) {
   			if(response.status === 'connected'){
 		document.getElementById('status');
     newPage();
-    document.getElementById('login').style.visibility = 'hidden';
+    document.getElementById('Login to Facebook').style.visibility = 'hidden';
     d3.selectAll('p').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in'}
