--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@ FB.getLoginStatus(function(response) {
         .attr("width", width)
         .attr("height", height)
         .style("fill", "white");
+
+        theProfile();
     }
 
     function theProfile(){
