--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ FB.getLoginStatus(function(response) {
       canvas.append("text")
         .attr("x", 50)
         .attr("y", 410)
-        .text("LOCATION")
+        .text("LOCATION:")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
@@ -245,7 +245,7 @@ FB.getLoginStatus(function(response) {
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 455)
+        .attr("y", 500)
         .text("-----------------------------------------------")
         .style("font", "20px 'stellar'")
         .style("fill", "black");
