--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@ FB.getLoginStatus(function(response) {
       canvas.append("text")
         .attr("x", 50)
         .attr("y", 260)
-        .text("NAME:" + response.name)
+        .text("NAME:" + " " + response.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
         .attr("y", 290)
-        .text("USER ID:" + response.id)
+        .text("USER ID:" + " " + response.id)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
