update in spacing

--- a/index.html
+++ b/index.html
@@ -205,49 +205,49 @@ FB.getLoginStatus(function(response) {
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 290 +20)
+        .attr("y", 310)
         .text("USER ID:" + " " + response.id)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 320 +20)
+        .attr("y", 360)
         .text("DATE OF BIRTH:" + " " + response.birthday)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 350+20)
+        .attr("y", 410)
         .text("GENDER:" + " " + response.gender)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 380+20)
+        .attr("y", 460)
         .text("HOMETOWN:" + " " + response.hometown.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 410+20)
+        .attr("y", 510)
         .text("LOCATION:" + " " + response.location.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 440+20)
+        .attr("y", 560)
         .text("PROFILE PICTURE:")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", 470+20)
+        .attr("y", 600)
         .text("-----------------------------------------------")
         .style("font", "20px 'stellar'")
         .style("fill", "black");
