--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     // create our canvas
     var canvas = d3.select("body").append("svg")
       .attr("width", width)
-      .attr("height", height);
+      .attr("height", 5000);
 
 
 banner();
