--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@ FB.getLoginStatus(function(response) {
 
       canvas.append("text")
         .attr("x", 50)
+        .attr("y", 750)
+        .text("EXPLORE YOUR ONLINE IDENTITY")
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+
+      canvas.append("text")
+        .attr("x", 50)
         .attr("y", 780)
         .text("-----------------------------------------------")
         .style("font", "20px 'stellar'")
