--- a/index.html
+++ b/index.html
@@ -269,6 +269,20 @@ FB.getLoginStatus(function(response) {
         .style("font", "20px 'stellar'")
         .style("fill", "black");
 
+      var button1 = canvas.append("svg:image")
+        .attr('x', 50)
+        .attr('y', 830)
+        .attr('width', 200)
+        .attr('height', 100)
+        .attr("xlink:href", "button.png");
+
+      canvas.append("text")
+        .attr("x", 70)
+        .attr("y", 850)
+        .text("PAGE LIKES")
+        .style("font", "15px 'stellar'")
+        .style("fill", "black");
+
       });
 
 
