--- a/index.html
+++ b/index.html
@@ -276,12 +276,26 @@ FB.getLoginStatus(function(response) {
         .attr('height', 100)
         .attr("xlink:href", "button.png");
 
-      canvas.append("text")
-        .attr("x", 90)
-        .attr("y", 895)
-        .text("PAGE LIKES")
-        .style("font", "25px 'stellar'")
-        .style("fill", "black");
+            canvas.append("text")
+              .attr("x", 90)
+              .attr("y", 895)
+              .text("PAGE LIKES")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
+
+      var button2 = canvas.append("svg:image")
+        .attr('x', 280)
+        .attr('y', 830)
+        .attr('width', 180)
+        .attr('height', 100)
+        .attr("xlink:href", "button.png");
+
+            canvas.append("text")
+              .attr("x", 320)
+              .attr("y", 895)
+              .text("ADVERTISERS")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
 
       });
 
