--- a/index.html
+++ b/index.html
@@ -273,27 +273,41 @@ FB.getLoginStatus(function(response) {
         .attr('x', 50)
         .attr('y', 830)
         .attr('width', 180)
-        .attr('height', 100)
+        .attr('height', 90)
         .attr("xlink:href", "button.png");
 
             canvas.append("text")
               .attr("x", 90)
-              .attr("y", 895)
+              .attr("y", 885)
               .text("PAGE LIKES")
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
       var button2 = canvas.append("svg:image")
-        .attr('x', 280)
+        .attr('x', 260)
         .attr('y', 830)
         .attr('width', 180)
         .attr('height', 90)
         .attr("xlink:href", "button.png");
 
             canvas.append("text")
-              .attr("x", 310)
+              .attr("x", 290)
               .attr("y", 885)
               .text("ADVERTISERS")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
+
+      var button3 = canvas.append("svg:image")
+        .attr('x', 460)
+        .attr('y', 830)
+        .attr('width', 180)
+        .attr('height', 90)
+        .attr("xlink:href", "button.png");
+
+            canvas.append("text")
+              .attr("x", 490)
+              .attr("y", 885)
+              .text("PHOTOS")
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
