--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	button1.on('click', function(d, i) {
+    	svg.on('click', function(d, i) {
   		console.log("You clicked", d), i;
 		pageLikes();
 
