--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	svg.on('click', function(d, i) {
-  		console.log("You clicked", d), i;
+    	svg.on('click', function() {
+  		console.log("You clicked")
 		pageLikes();
 
 	});
