--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	svg.on('click', function() {
+    	button1.on('click', function() {
   		console.log("You clicked")
 		pageLikes();
 
