--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@ FB.getLoginStatus(function(response) {
         .attr('width', 180)
         .attr('height', 90)
         .attr("xlink:href", "button.png");
+        .on('click', function() {
+  		console.log("You clicked")
+		pageLikes();
 
             canvas.append("text")
               .attr("x", 90)
@@ -343,9 +346,9 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	button1.on('click', function() {
-  		console.log("You clicked")
-		pageLikes();
+  //   	button1.on('click', function() {
+  // 		console.log("You clicked")
+		// pageLikes();
 
 	});
 
