--- a/index.html
+++ b/index.html
@@ -306,10 +306,11 @@ FB.getLoginStatus(function(response) {
         .attr('y', 830)
         .attr('width', 180)
         .attr('height', 90)
-        .attr("xlink:href", "button.png");
+        .attr("xlink:href", "button.png")
         .on('click', function() {
-  		console.log("You clicked")
-		pageLikes();
+  			console.log("You clicked")
+			pageLikes();
+		});
 
             canvas.append("text")
               .attr("x", 90)
