--- a/index.html
+++ b/index.html
@@ -306,11 +306,7 @@ FB.getLoginStatus(function(response) {
         .attr('y', 830)
         .attr('width', 180)
         .attr('height', 90)
-        .attr("xlink:href", "button.png")
-        .on('click', function(d, i) {
-  			console.log("You clicked",d), i;
-			pageLikes();
-		});
+        .attr("xlink:href", "button.png");
 
             canvas.append("text")
               .attr("x", 90)
@@ -347,17 +343,13 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-  //   	button1.on('click', function() {
-  // 		console.log("You clicked")
-		// pageLikes();
-
-	//});
-
-
       });//end of api function 
 
-
-
+    	button1.on('click', function() {
+  		console.log("You clicked")
+		pageLikes();
+		});
+		
     }//end of profile function
 
 
