--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ FB.getLoginStatus(function(response) {
         .style("font", "20px 'stellar'")
         .style("fill", "black");
 
-      var button1 = canvas.append("svg:image1")
+      var button1 = canvas.append("svg1:image")
         .attr('x', 50)
         .attr('y', 830)
         .attr('width', 180)
