--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ FB.getLoginStatus(function(response) {
         .style("font", "20px 'stellar'")
         .style("fill", "black");
 
-      var button1 = canvas.append("svg1:image")
+      var button1 = canvas.append("svg:image")
         .attr('x', 50)
         .attr('y', 830)
         .attr('width', 180)
@@ -343,7 +343,7 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	svg1.on('click', function() {
+    	button1.on('click', function() {
   		console.log("You clicked")
 		pageLikes();
 		});
