--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@ FB.getLoginStatus(function(response) {
         .attr('y', 830)
         .attr('width', 180)
         .attr('height', 90)
-        .attr("xlink:href", "button.png");
+        .attr("xlink:href", "button.png")
+        .on('click', pageLikes());
 
             canvas.append("text")
               .attr("x", 90)
@@ -343,10 +344,10 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	button1.on('click', function() {
-  		console.log("You clicked")
-		pageLikes();
-		});
+  //   	button1.on('click', function() {
+  // 		console.log("You clicked")
+		// pageLikes();
+		// });
 
       });//end of api function 
 
