--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ FB.getLoginStatus(function(response) {
               .style("fill", "black");
 
     	svg.on('click', function() {
-  		console.log("You clicked")
+  		//console.log("You clicked")
 		pageLikes();
 		});
 
@@ -364,7 +364,7 @@ function pageLikes(){
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
-        .attr("height", height)
+        .attr("height", 1000)
         .style("fill", "white");
 
 
