--- a/index.html
+++ b/index.html
@@ -149,29 +149,6 @@ FB.getLoginStatus(function(response) {
   	});
   }
 
-  // //logout function
-  // function logout(){
-  //   FB.logout(function(response) {
-  // // user is now logged out
-  //   });
-  // }
-
-  // // getting user name
-  //   function getName() {
-  //     FB.api('/me', 'GET', {fields: 'first_name,last_name,name, picture'}, function(response) {
-  //       document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>"; // change id to get first name etc. 
-  //       console.log(response)
-  //     });
-  //   }
-
-  //     // getting user id
-  //   function getId() {
-  //     FB.api('/me', 'GET', {fields: 'id'}, function(response) {
-  //       document.getElementById('status').innerHTML = response.id; // change id to get first name etc. 
-  //     });
-  //   }
-
-
     //banner 
     function banner(){
 
@@ -360,6 +337,7 @@ function pageLikes(){
 
 	console.log("You clicked");
 
+   document.getElementById('status').style.visibility = 'hidden';
     var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 0)
