adding second api

--- a/index.html
+++ b/index.html
@@ -345,8 +345,29 @@ function pageLikes(){
         .attr("height", 1000)
         .style("fill", "white");
 
+     FB.api('/me', 'GET', {fields: 'likes'}, 
+     	
+     	function(response) {
 
-}
+     		console.log(response.likes.name);
+
+    	function generateCoords() {
+			var x = Math.floor(Math.random() * (width-50)) + 1;
+			var y = Math.floor(Math.random() * (height-50)) + 1;
+			return [x, y];
+		}
+
+		// // Some specs for the circles
+		// var elem = canvas
+		// 	.selectAll("g title")
+		// 	.data(response.likes.name); // use the first 30 datapoints
+      
+
+  });//end of fb api function 
+
+
+}// end of page likes function
+
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
 
 </script>
