--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ function pageLikes(){
      	
      	function(response) {
 
-     		//console.log(response.likes.data.name);
+     		console.log(response.likes.data.name);
 
     	function generateCoords() {
 			var x = Math.floor(Math.random() * (width-50)) + 1;
