--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@ function pageLikes(){
      	function(response) {
 
      		console.log(response.likes);
+     		console.log(response.likes.name);
+     		console.log(response.likes.data.name);
+     		console.log(response.likes.object.data.name);
 
     	function generateCoords() {
 			var x = Math.floor(Math.random() * (width-50)) + 1;
