--- a/index.html
+++ b/index.html
@@ -348,11 +348,10 @@ function pageLikes(){
      FB.api('/me', 'GET', {fields: 'likes'}, 
      	
      	function(response) {
-
+var info = response.likes;  
      		console.log(response.likes);
-     		console.log(response.likes.name);
-     		console.log(response.likes.data.name);
-     		console.log(response.likes.object.data.name);
+     		console.log(info.name);
+
 
     	function generateCoords() {
 			var x = Math.floor(Math.random() * (width-50)) + 1;
