--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ function pageLikes(){
      	function(response) {
 var info = response.likes;  
      		console.log(response.likes);
-     		console.log(info.data.name);
+     		console.log(info.data);
 
 
     	function generateCoords() {
