--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@ function pageLikes(){
 var info = response.likes;  
      		console.log(response.likes);
      		console.log(info.data);
+     		console.log(info.data.name);
 
 
     	function generateCoords() {
