--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@ var info2 = info.data;
      		console.log(info2);
      		console.log(info2.name);
 
+var info3 = function (d) { return info2.name};
+console.log(info3); 
+
 
     	function generateCoords() {
 			var x = Math.floor(Math.random() * (width-50)) + 1;
