--- a/index.html
+++ b/index.html
@@ -361,7 +361,9 @@ var info2 = info.data;
      		console.log(info2);
      		console.log(info2.name);
 
-     		return info2.name; 
+for (var i = 0; i < info2.length; i++) {
+	console.log(info2[i].name)
+}; 
 
 		// // Some specs for the circles
 		// var elem = canvas
