--- a/index.html
+++ b/index.html
@@ -363,6 +363,8 @@ var info2 = info.data;
 
 for (var i = 0; i < info2.length; i++) {
 	console.log(info2[i].name)
+	console.log('break')
+	console.log(info2.name[i])
 }; 
 
 		// // Some specs for the circles
