--- a/index.html
+++ b/index.html
@@ -363,12 +363,35 @@ var info2 = info.data;
 
 for (var i = 0; i < info2.length; i++) {
 	console.log(info2[i].name)
-}; 
+		// Some specs for the circles
+		var elem = canvas
+			.selectAll("g title")
+			.data(info2[i].name); // using the datapoints 
 
-		// // Some specs for the circles
-		// var elem = canvas
-		// 	.selectAll("g title")
-		// 	.data(response.likes.name); // use the first 30 datapoints
+
+			// Create a container for each circle
+			var container = elem.enter()
+				.append("g")
+				.attr("transform", function (r) {
+					return "translate(" + generateCoords()[0] + "," + generateCoords()[1] + ")";
+				})
+			
+			var r =50 //setting radius of circle 
+
+			//transistion variable 
+			var t = d3.transition()
+    			.duration(750)
+
+			// Create and add a circle
+			var circle = container.append("circle")
+				.attr("r", function (r) { return r }); // specify the radius of the circle
+			var wrapWidth = r*2;
+			var fontSize = 12; 
+			var side   = 2 * r * Math.cos(Math.PI / 4);
+
+};//end of for loop  
+
+
       
 
   });//end of fb api function 
