--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ for (var i = 0; i < info2.length; i++) {
 			// Create a container for each circle
 			var container = elem.enter()
 				.append("g")
-				.attr("transform", function (r) {
+				.attr("transform", function (d) {
 					return "translate(" + generateCoords()[0] + "," + generateCoords()[1] + ")";
 				})
 			
@@ -384,7 +384,7 @@ for (var i = 0; i < info2.length; i++) {
 
 			// Create and add a circle
 			var circle = container.append("circle")
-				.attr("r", function (r) { return r }); // specify the radius of the circle
+				.attr("r", function (d) { return r }); // specify the radius of the circle
 			var wrapWidth = r*2;
 			var fontSize = 12; 
 			var side   = 2 * r * Math.cos(Math.PI / 4);
